src/objects/Server__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Hardware</label>
        <referenceTo>Hardware__c</referenceTo>
        <relationshipLabel>Servers</relationshipLabel>
        <relationshipName>Servers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Server</label>
    <nameField>
        <label>Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>